--- a/frontend/src/styles/Dashboard.css
+++ b/frontend/src/styles/Dashboard.css
@@ -1,15 +1,26 @@
+/* Background Image */
+body {
+    background-image: url('/Users/rusheenpatel/Downloads/trailmixer_dashboard_background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
+
 /* General container for dashboard */
 .dashboard-container {
     background-color: #f4f4f4;
     padding: 2rem;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
   
 /* Title */
 .dashboard-title {
     font-size: 2.5rem;
     font-weight: 700;
-    color: #4CAF50;
+    color: #05472A;
     text-align: center;
     margin-bottom: 1rem;
 }
@@ -36,19 +47,21 @@
   
 .summary-card .percent {
     font-size: 1.25rem;
-    color: #388e3c; /* Dark green */
+    color: #05472A;;
     font-weight: 700;
 }
   
 /* Trail Log Form */
 .trail-log-form {
     width: 100%;
-    max-width: 30rem;
+    max-width: 500px;
     background-color: white;
-    padding: 1.5rem;
+    padding: 5rem;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    margin-top: 2rem;
+    box-sizing: border-box;
+    margin: 2rem auto 0 auto;
+    text-align: center;
 }
   
 .trail-log-form h2 {
@@ -79,7 +92,34 @@
 .trail-log-form button:hover {
     background-color: #45a049;
 }
+
+.difficulty-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 16px;
+}
   
+.difficulty-label {
+    font-size: 14px;
+    font-weight: 500;
+    color: #4a4a4a;
+    margin-bottom: 8px;
+}
+  
+.difficulty-options {
+    display: flex;
+    gap: 12px;
+    justify-content: center;
+}
+  
+.difficulty-option {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 14px;
+}  
+
 /* Trails Grid */
 .trails-grid {
     display: grid;
